fix: fixed folder being out of place in directory hierarchy

--- a/pages/registrera/style.css
+++ b/pages/registrera/style.css
@@ -53,3 +53,8 @@ body {
     min-height: auto;
     background-color: white;
 }
+
+.logo-container img {
+    width: 10px;
+    height: auto;
+}
